--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "echo",
             "type": "shell",
-            "command": "make all",
+            "command": "make all && make utils",
             "group": {
                 "kind": "build",
                 "isDefault": true
