writing slice template projections to disk, will test.

--- a/parameters.in
+++ b/parameters.in
@@ -40,6 +40,7 @@ i_save_sliced_fields = -1	! How often to save sliced state files to disk
 i_print_spectrum     = -1   ! How often to compute spectra
 i_flush   = -1              ! How often to force flush textual data
 i_project = -1              ! How often to project onto the projection basis
+i_slice_project = -1        ! How often to project onto slice template basis
 /
 
 &time_stepping
