Implemented Rayleigh friction, will test

--- a/parameters.in
+++ b/parameters.in
@@ -7,10 +7,11 @@ Lz = 4.0 ! Length in z
 /
 
 &physics
-forcing    = 1      ! 0: none, 1: sine, 2: cosine
-Re         = 630.0  ! Reynolds number
-tilt_angle = 0.0    ! (degrees)
-smag_const = 0.0    ! Smagorinsky constant (0: DNS, >0: LES)
+forcing    = 1     ! 0: none, 1: sine, 2: cosine
+Re         = 630.0 ! Reynolds number
+tilt_angle = 0.0   ! (degrees)
+smag_const = 0.0   ! Smagorinsky constant (0: DNS, >0: LES)
+sigma_R = 1e-2     ! Rayleigh friction constant
 /
 
 &symmetries
